# RAGAgent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
eval_data/: test_set.json
src/: config.py  observability.py
src/agent/: graph.py  router.py  single_agent.py  state.py  tools.py
src/agent/multi_agent/: critique_agent.py  retrieval_agent.py  supervisor.py  synthesis_agent.py
src/api/: app.py  schemas.py
src/api/routes/: ingest.py  query.py
src/cache/: semantic_cache.py
src/evaluation/: grader.py  offline_eval.py
src/guardrails/: guardrails.py
src/retrieval/: bm25.py  chunker.py  embedder.py  hybrid.py  vectorstore.py
tests/: test_api.py  test_cache.py  test_guardrails.py  test_retrieval.py
ui/: app.py
